Assignment 4 CPY-PST

--- a/conFusionServer/public/index.html
+++ b/conFusionServer/public/index.html
@@ -1,6 +1,11 @@
 <html>
 	<title>This is index.html</title>
 	<body>
+		<script
+			type="text/javascript"
+			src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=Q3xn4X_OLuP2q3iO-M9EcqcBzJcKbjPpzYzND3xc-uZ93hikv0X6Ppf0d74fuVRm24jnemINhXVQGjPTr6WDH31k_qJfVmLdoiELGdOxygu6kwJx3VOg-R3IZUf9N1wBf-vbxmKUtNlftVrnO8c4-LYtY1bu1VoZ-zwR1E5S8Zjn1FFlxUNH-RdRMCUrDTn5BPKYWMnNRAY3Y_ZcgRRhDhGboDnqOV-nk9jwQX7NmElnJaBbqbIEfK32Dp5j8sSFoLcbxz2w5IVdqLAbRpHfr0yWyaUABJMas-xcqtYoSdITl5g6BaZgzviRt0T8SRGeEN6OMdNIy9BR3NWwXdMz6lZh1AnjV5cKTC9t1D-TY8ss4BfX3j1Z1xYOXmvUyNaho9AeIXkmrK_9CToLliH7leRr0CgmQ5NwmNPQk_3r0Wuh3J-UIcFzJT1wm69UXyde"
+			charset="UTF-8"
+		></script>
 		<script>
 			// This is called with the results from from FB.getLoginStatus().
 			function statusChangeCallback(response) {
